# myriam

./: .gitignore  .woodpecker.yml  CHANGELOG.md  Cargo.toml  NOTICE  README.md  flake.nix
examples/: echo-actor.rs  echo-client.rs  keygen.rs  simple.rs
examples/chatapp/: Cargo.toml  README.md  torrc
examples/chatapp/.helix/: config.toml
examples/chatapp/src/: main.rs  messaging.rs  models.rs  tui.rs
nix/: shell.nix
nix/pkgs/: default.nix
nix/pkgs/myriam/: default.nix
src/: actors.rs  address.rs  auth.rs  crypto.rs  dencoder.rs  identity.rs  lib.rs  messaging.rs  models.rs  net.rs  prelude.rs  trust_store.rs  utils.rs
src/actors/: auth.rs  local.rs  mod.rs  opts.rs  remote.rs  swarm_loop.rs  tests.rs
src/actors/remote/: address.rs  dencoder.rs  netlayer.rs  router.rs
src/actors/remote/dencoder/: bincode.rs  bitcode.rs
src/actors/remote/netlayer/: tcp_layer.rs  tor_layer.rs  unix_layer.rs
src/dencoder/: bincode.rs
src/net/: behavior.rs  codec.rs  keys.rs  mod.rs  swarm.rs
tests/: stress.rs  tor_layer.rs  torrc
