[package]
name = "myriam"
version = "0.0.11"
edition = "2021"
license = "Apache-2.0"
description = "Remote actors on top of libp2p."
homepage = "https://codeberg.org/arisunz/myriam-rs"
repository = "https://codeberg.org/arisunz/myriam-rs"
categories = ["concurrency", "network-programming", "asynchronous"]
keywords = ["actor", "actors", "distributed", "libp2p"]
authors = ["Ariela Wenner <arisunz at disroot dot org>"]

[features]
default = ["remote", "tokio"]
remote = ["tokio"]
tokio = ["dep:tokio"]
async_std = []

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"], optional = true }
tracing = "0.1.40"
