[package]
name = "myriam"
version = "0.0.11"
edition = "2021"
license = "Apache-2.0"
description = "Actor model implementation for local and remote actors."
homepage = "https://codeberg.org/arisunz/myriam-rs"
repository = "https://codeberg.org/arisunz/myriam-rs"
categories = ["concurrency", "network-programming", "asynchronous"]
keywords = ["actor", "actors", "distributed", "libp2p"]
authors = ["Ariela Wenner <arisunz at disroot dot org>"]

[features]
default = ["remote", "tcp", "tor"]
remote = ["dep:rand", "dep:hex"]
tcp = ["remote"]
tor = ["dep:socks5-impl", "remote"]

[dependencies]
bincode = "1.3.3"
hex = { version = "0.4.3", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.203", features = ["derive"] }
socks5-impl = { version = "0.5.14", optional = true }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"
