[package]
name = "myriam"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "Actor model implementation for local and remote actors."
homepage = "https://github.com/arirei/myriam"
repository = "https://github.com/arirei/myriam"
categories = ["concurrency", "network-programming", "asynchronous"]
keywords = ["actor", "actors", "distributed"]
authors = [
    "Ariela Wenner <arisunz at disroot dot org>",
    "Myriam Contributors <myriam at myriam dot actor>"
]

[features]
default = ["remote", "tcp", "tor"]
remote = ["dep:serde", "dep:rand", "dep:base32"]
tcp = ["remote"]
tor = ["remote", "dep:arti-client", "dep:futures", "dep:safelog", "dep:tor-cell", "dep:tor-hsservice", "dep:tor-proto", "dep:tor-rtcompat", "dep:tor-error"]

[dependencies]
bincode = "1.3.3"
bitcode = { version = "0.6.9", features = ["serde"] }
base32 = { version = "0.5.1", optional = true }
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
futures = { version = "0.3.31", optional = true }
safelog = { version = "0.7.2", optional = true }
arti-client = { version = "0.39.0", features = ["onion-service-client", "onion-service-service"], optional = true }
tor-cell = { version = "0.39.0", optional = true }
tor-hsservice = { version = "0.39.0", optional = true }
tor-proto = { version = "0.39.0", optional = true }
tor-rtcompat = { version = "0.39.0", optional = true }
tor-error = { version = "0.39.0", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.18"
